; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_a.c_b43_aphy_op_radio_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_a.c_b43_aphy_op_radio_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43_wldev = type { i32 }

@B43_MMIO_RADIO_CONTROL = common dso_local global i32 0, align 4
@B43_MMIO_RADIO_DATA_LOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.b43_wldev*, i32)* @b43_aphy_op_radio_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @b43_aphy_op_radio_read(%struct.b43_wldev* %0, i32 %1) #0 {
  %3 = alloca %struct.b43_wldev*, align 8
  %4 = alloca i32, align 4
  store %struct.b43_wldev* %0, %struct.b43_wldev** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp eq i32 %5, 1
  %7 = zext i1 %6 to i32
  %8 = call i32 @B43_WARN_ON(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = or i32 %9, 64
  store i32 %10, i32* %4, align 4
  %11 = load %struct.b43_wldev*, %struct.b43_wldev** %3, align 8
  %12 = load i32, i32* @B43_MMIO_RADIO_CONTROL, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @b43_write16(%struct.b43_wldev* %11, i32 %12, i32 %13)
  %15 = load %struct.b43_wldev*, %struct.b43_wldev** %3, align 8
  %16 = load i32, i32* @B43_MMIO_RADIO_DATA_LOW, align 4
  %17 = call i32 @b43_read16(%struct.b43_wldev* %15, i32 %16)
  ret i32 %17
}

declare dso_local i32 @B43_WARN_ON(i32) #1

declare dso_local i32 @b43_write16(%struct.b43_wldev*, i32, i32) #1

declare dso_local i32 @b43_read16(%struct.b43_wldev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
